# libgwmodel

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  Doxyfile.zh-Hans  README.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clean-cache.yml  cmake.yml  doc.yml  main.yml
R/: CMakeLists.txt  DESCRIPTION.in  NAMESPACE.in
R/scripts/: RcppExport.R  gwpca.R
R/src/: Makevars  Makevars.win  RcppExport.cpp  init.c
cmake/: FindGWmodel.cmake
docs/: .readthedocs.yaml  README.md  README.zh_CN.md  about.md  conf.py  index.rst  requirements.txt
docs/_static/: mathjax.css
docs/locale/zh_CN/LC_MESSAGES/: README.po  README.zh_CN.po  about.po  index.po
docs/locale/zh_CN/LC_MESSAGES/api/: classCGwmGGWR.po  (+369 more)
docs/models/: gwr-basic.rst  index.rst
include/: armadillo_config.h  gwmodel.h
include/cumat/: cumat.hpp
include/gwmodelcuda/: GWRBasicGpuTask.h  IGWRBasicGpuTask.h  StdTelegram.h
include/gwmodelpp/: Algorithm.h  BandwidthSelector.h  BinomialModel.h  CGwmAlgorithm.h  CGwmBandwidthSelector.h  CGwmBinomialModel.h  CGwmGGWR.h  CGwmGTWR.h  CGwmGWDR.h  CGwmGWPCA.h  CGwmGWRBase.h  CGwmGWRBasic.h  CGwmGWRGeneralized.h  CGwmGWRLocalCollinearity.h  CGwmGWRMultiscale.h  CGwmGWRRobust.h  CGwmGWRScalable.h  CGwmGWSS.h  CGwmGeneralizedLinearModel.h  CGwmGeoWeightedRegression.h  CGwmLinearModel.h  CGwmLocalCollinearityGWR.h  CGwmMGWR.h  CGwmPoissonModel.h  CGwmRobustGWR.h  CGwmScalableGWR.h  CGwmSimpleLayer.h  CGwmSpatialAlgorithm.h  CGwmSpatialMonoscaleAlgorithm.h  CGwmSpatialMultiscaleAlgorithm.h  CGwmVariableForwardSelector.h  CSimpleLayer.h  CSpatialAlgorithm.h  GTDR.h  GTWR.h  GWAverage.h  GWCorrelation.h  GWDA.h  GWDR.h  GWPCA.h  (+33 more)
include/gwmodelpp/spatialweight/: BandwidthWeight.h  CGwmBandwidthWeight.h  CGwmCRSDistance.h  CGwmCRSSTDistance.h  CGwmCRSTDistance.h  CGwmDMatDistance.h  CGwmDistance.h  CGwmMinkwoskiDistance.h  CGwmOneDimDistance.h  CGwmSpatialWeight.h  CGwmSpatialWeight.hpp  CGwmWeight.h  CRSDistance.h  CRSSTDistance.h  DMatDistance.h  Distance.h  MinkwoskiDistance.h  OneDimDistance.h  SpatialWeight.h  Weight.h
include/gwmodelpp/utils/: CudaUtils.h  armampi.h  cumat.hpp
pygwmodel/: CMakeLists.txt  __init__.py  cbase.pxd  gwmodel.pxd  gwpca.pxd  gwpca.pyx  gwr_basic.pxd  gwss.pxd  high_api.py  mat_interface.pxd  name_list_interface.pxd  name_list_interface.pyx  pygwmodel.pyx  simple_layer.pxd  simple_layer.pyx  spatial_weight.pyx  variable_interface.pxd  variable_interface.pyx
python/: CMakeLists.txt  __init__.py  cbase.pxd  gwmodel.pxd  gwpca.pyx  gwr_basic.pxd  gwr_basic.pyx  gwss.pxd  gwss.pyx  mat_interface.pxd  mat_interface.pyx  name_list_interface.pxd  name_list_interface.pyx  pygwmodel.pyx  pyproject.toml  regression_diagnostic.pxd  regression_diagnostic.pyx  setup.py  simple_layer.pxd  simple_layer.pyx  spatial_weight.pxd  spatial_weight.pyx  variable_interface.pxd  variable_interface.pyx
python/pygwmodel/: CMakeLists.txt  __init__.py
python/test/: CMakeLists.txt  testGWPCA.py  testGWRBasic.py
src/: CMakeLists.txt  gwmodel.cpp  libgwmodelConfig.cmake  libgwmodelConfig.cmake.in  main.cpp
src/gwmodelcuda/: GWRBasicGpuTask.cpp  GWRBasicGpuTask.h  IGWRBasicGpuTask.cpp  IGWRBasicGpuTask.h  StdTelegram.cpp
src/gwmodelpp/: BandwidthSelector.cpp  BinomialModel.cpp  CGwmAlgorithm.cpp  CGwmBandwidthSelector.cpp  CGwmBinomialModel.cpp  CGwmGGWR.cpp  CGwmGTWR.cpp  CGwmGWDR.cpp  CGwmGWPCA.cpp  CGwmGWRBase.cpp  CGwmGWRBasic.cpp  CGwmGWRGeneralized.cpp  CGwmGWRLocalCollinearity.cpp  CGwmGWRMultiscale.cpp  CGwmGWRRobust.cpp  CGwmGWRScalable.cpp  CGwmGWSS.cpp  CGwmGeneralizedLinearModel.cpp  CGwmGeoWeightedRegression.cpp  CGwmLinearModel.cpp  CGwmLocalCollinearityGWR.cpp  CGwmMGWR.cpp  CGwmPoissonModel.cpp  CGwmRobustGWR.cpp  CGwmScalableGWR.cpp  CGwmSimpleLayer.cpp  CGwmSpatialAlgorithm.cpp  CGwmSpatialMonoscaleAlgorithm.cpp  CGwmSpatialMultiscaleAlgorithm.cpp  CGwmVariableForwardSelector.cpp  CSimpleLayer.cpp  CSpatialAlgorithm.cpp  GTDR.cpp  GTWR.cpp  GWAverage.cpp  GWCorrelation.cpp  GWDA.cpp  GWDR.cpp  GWPCA.cpp  GWRBase.cpp  (+16 more)
src/gwmodelpp/spatialweight/: BandwidthWeight.cpp  CGwmBandwidthWeight.cpp  CGwmCRSDistance.cpp  CGwmCRSSTDistance.cpp  CGwmCRSTDistance.cpp  CGwmDMatDistance.cpp  CGwmDistance.cpp  CGwmMinkwoskiDistance.cpp  CGwmOneDimDistance.cpp  CGwmSpatialWeight.cpp  CGwmWeight.cpp  CRSDistance.cpp  CRSSTDistance.cpp  DMatDistance.cpp  Distance.cpp  MinkwoskiDistance.cpp  OneDimDistance.cpp  SpatialWeight.cpp  Weight.cpp
src/gwmodelpp/spatialweight/cuda/: BandwidthWeightKernel.cu  CRSDistanceKernel.cu
src/gwmodelpp/utils/: CudaUtils.cpp  armampi.cpp  cumat.cpp
test/: BasicGWR.cpp  CMakeLists.txt  FileTelegram.cpp  GGWR.cpp  GTWR.cpp  GWDA.cpp  GWDR.cpp  GWPCA.cpp  GWRBasic.cpp  GWRGeneralized.cpp  GWRLocalCollinearity.cpp  GWRMultiscale.cpp  GWRRobust.cpp  GWRScalable.cpp  GWSS.cpp  LocalCollinearityGWR.cpp  Logger.cpp  MGWR.cpp  RobustGWR.cpp  ScalableGWR.cpp  TerminateCheckTelegram.cpp  cumat.cpp  libgwmodel.code-workspace  testCuMat.cpp  testGTDR.cpp  testGTWR.cpp  testGWAverage.cpp  testGWCorrelation.cpp  testGWDA.cpp  testGWPCA.cpp  testGWRBasic.cpp  testGWRGeneralized.cpp  testGWRLocalCollinearity.cpp  testGWRMultiscale.cpp  testGWRRobust.cpp  testGWSS.cpp  testLogger.cpp  testSDR.cpp
test/BasicGWR/: CMakeLists.txt  main.cpp  shared.cpp  static.cpp
test/CMakeFind/: CMakeLists.txt  main.cpp
test/GWPCA/: CMakeLists.txt  shared.cpp  static.cpp
test/GWSS/: CMakeLists.txt  shared.cpp  static.cpp
test/Multithread/: CMakeLists.txt  shared.cpp  static.cpp
test/Python/: CMakeLists.txt  testGWPCA.py  testGWRBasic.py  testGWSS.py
test/cmake/: CMakeLists.txt
test/cmake/find/: CMakeLists.txt
test/data/: londonhp.cpp  londonhp100.cpp  londonhp100.csv  londonhp100coords.csv  londonhp100data.csv  londonhp100stcoords.csv  londonhp100temcoords.csv  londonhp100temporal.csv  londonhpcoords.csv  londonhpdata.csv
test/include/: FileTelegram.h  TerminateCheckTelegram.h  csv.h  londonhp.h  londonhp100.h
test/mpi/: CMakeLists.txt  testGWRBasicMpi.cpp  testGWRMultiscaleMpi.cpp  testMpiMatMul.cpp
(+5 files in other folders)
